refactor(filtering): implement universal TransactionFilter with comprehensive query capabilities
  - Enhanced TransactionFilter record with transactionTypes and transactionSources fields
  - Migrated all dashboard, report, and export services from repository.search() to JPA Specifications
  - Updated TransactionSpecFactory with new specification methods for transaction type and source filtering
  - Refactored DashboardService, ReportService, and BudgetTrackingService to use specification-based queries
  - Fixed CreditCardBillingService, TransactionFilterNormalizer to support new filter parameters
  - Updated all controllers (Dashboard, Report, Export) to accept 8 optional filter parameters via query params
  - Documented universal filtering capabilities in HELP.md with comprehensive examples
  - Fixed all unit tests (DashboardServiceTest, ReportServiceTest, BudgetTrackingServiceTest) to use TransactionFilter
  - Implemented full UPDATE endpoint for InstallmentGroupController

  Breaking Changes:
  - Service method signatures changed from individual parameters to TransactionFilter object
  - All dashboard/report/export methods now require TransactionFilter instead of (accountId, startDate, endDate)

  Features:
  - Users can now filter charts, reports, and exports by any combination of:
    * Categories (multi-select)
    * Responsible users (multi-select)
    * Credit cards (multi-select)
    * Transaction types (ONE_TIME, INSTALLMENT, RECURRING, PAYMENT, REFUND)
    * Transaction sources (MANUAL, CSV_IMPORT, INVOICE_IMPORT, SYSTEM)
    * Amount ranges (min/max)
    * Date ranges
  - All filters use AND logic between parameter types and OR logic within lists